v1.8.0/product-specifications/support-functions/13.-performance-management.md
# 16. Performance management

OpenCRVS dashboards leverage the power of Metabase to transform civil registration data into insightful visualisations. Each dashboard is highly customisable, allowing users to create and integrate various data views to suit their specific needs. Out of the box, OpenCRVS is equipped with an array of default visualisations to give insight on the standard civil registration and vital statistics KPIs.

Helping performance managers understand how their system and workflows are performing and inform targeted corrective action. To ensure they are on target to achieving universal registration rates.

OpenCRVS provides 4 performance views:

1. **Registrations**: Infographics of registration data (Access: Performance Manager)
2. **Statistics**: Infographics of vital statistics data (Access: Performance Manager)
3. **Leaderboards**: Infographics of performance of Registrars and Registration Offices (Access: Performance Manager)
4. **Performance**: Reports in table form on CRVS performance… (Access: All users)

### **Configuration options**

* Add/remove performance dashboards visualisations using Metabase interfaces
* Control who can see Default Performance Dashboards with `scope:performance.read`&#x20;
* Control who can see Metabase Performance Dashboards with `scope:performance.read-dashboards`&#x20;
* Control who can export vital statistics with `scope:performance.vital-statistics-export`&#x20;

### Performance dashboards

#### **Dashboard**

Filters:

* Vital event type
* Time period
* State
* Gender

Visualisation widgets:

* Registrations
* Registrations certified
* Registrations by age
* Registrations by gender
* Completeness rate
* Completeness rate by State
* Registrations over time
* Record corrections by type
* Registrations by state

#### Statistics

Filters:

* Vital event type
* Time period
* State
* Gender

Visualisation widgets:

* By order
* By age of mother
* By literacy of parents
* By level of education of parents
* By place of birth

#### Leaderboards

Filters: Vital event type, time period, state, gender

* Leaderboard of Registrars
* Leaderboard by location????

#### Performance management

Filters:

* Vital event type
* Time period
* Location

Statistics:

* Completeness rates
* Registrations
* Certificate issued
* Source of declarations
* Corrections

{% embed url="https://youtu.be/YMVQMQxiHEw" %}
